# orml-xcm-builder

./: Cargo.toml  README.md
general/: Cargo.toml
kusama/: Cargo.toml
kusama/src/: lib.rs  tinkernet_multisigs.rs
polkadot/: Cargo.toml
shared/: Cargo.toml
shared/src/: lib.rs
src/: kusama.rs  lib.rs
