[package]
name = "orml-xcm-builder-polkadot"
description = "Opinionated community repository for XCM types. Polkadot relay and parachains specific types."
edition.workspace = true
version.workspace = true

[dependencies]
parity-scale-codec.workspace = true
scale-info.workspace = true
log.workspace = true

# paritytech/substrate dependencies
sp-std.workspace = true
sp-arithmetic.workspace = true
sp-io.workspace = true
sp-core.workspace = true
sp-runtime.workspace = true
sp-weights.workspace = true
frame-support.workspace = true
frame-system.workspace = true

# paritytech/polkadot dependencies
xcm.workspace = true
xcm-executor.workspace = true

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
]
std = [
	"log/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"xcm/std",
	"xcm-executor/std",
	"sp-std/std",
	"sp-arithmetic/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-weights/std",
	"frame-support/std",
	"frame-system/std",
]